# Potencial_electrostatico

./: README.md  app.py  field.html  genindex.html  grid.html  inst.html  jacobi.html  objects.inv  prueba.py  pruebavi.py  pyproject.toml  requirements.txt  search.html  searchindex.js  solver.html  visual.html
_sources/: field.rst.txt  index.rst.txt  theory.rst.txt
docs/source/: api.rst  conf.py  grid.rst  index.rst  jacobi.rst  solver.rst
src/campo_estatico_mdf/: __init__.py  bc.py  field.py  grid.py  jacobi.py  solver.py  visual.py
src/campo_estatico_mdf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/campo_estatico_mdf_Cogua_Neira.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_solver.py
