[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "campo-estatico-mdf"
version = "0.2.0"
description = "Laplace 2D por MDF (Jacobi), cálculo de E y frontend Streamlit"
authors = [
    { name = "Julian Cogua", email = "ojcoguaa@udistrital.edu.co" },
    { name = "Juan Esteban Neira", email = "jueneirad@udistrital.edu.co" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.22", "matplotlib>=3.7", "streamlit>=1.30"]
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["campo_estatico_mdf"]
